-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Currently, the last unlink of an inode sends back the inode attributes from the MDS, but the client ignores them. This results in i_nlink on the inode (in memory on the client) staying at one after it has been fully unlinked, which means it stays in memory until discarded from pressure. This is also problematic for wrapfs atop Lustre, would like to use the nlink count to be certain the file is really gone.
The only attribute which is relevant on a fully unlinked inode is i_nlink, so we just read that out. Patch coming momentarily.