lustre/tests/sanity.sh
@@ -12,8 +12,8 @@ ONLY=${ONLY:-"$*"}
 ALWAYS_EXCEPT="                42a    42b      42c     45   68b $SANITY_EXCEPT"
 # UPDATE THE COMMENT ABOVE WITH BUG NUMBERS WHEN CHANGING ALWAYS_EXCEPT!
 
-# skipped tests: LU-2036 LU-8411 LU-9096 LU-9054
-ALWAYS_EXCEPT="  76	 407     253     312 $ALWAYS_EXCEPT"
+# skipped tests: LU-8411 LU-9096 LU-9054
+ALWAYS_EXCEPT="  407     253     312 $ALWAYS_EXCEPT"
 
 # Check Grants after these tests
 GRANT_CHECK_LIST="$GRANT_CHECK_LIST 42a 42b 42c 42d 42e 63a 63b 64a 64b 64c"
@@ -6003,21 +6003,9 @@ num_inodes() {
 	awk '/lustre_inode_cache/ {print $2; exit}' /proc/slabinfo
 }
 
-get_inode_slab_tunables() {
-	awk '/lustre_inode_cache/ {print $9," ",$10," ",$11; exit}' /proc/slabinfo
-}
-
-set_inode_slab_tunables() {
-	echo "lustre_inode_cache $1" > /proc/slabinfo
-}
-
 test_76() { # Now for bug 20433, added originally in bug 1443
 	[ $PARALLEL == "yes" ] && skip "skip parallel run" && return
-	local SLAB_SETTINGS=$(get_inode_slab_tunables)
 	local CPUS=$(getconf _NPROCESSORS_ONLN 2>/dev/null)
-	# we cannot set limit below 1 which means 1 inode in each
-	# per-cpu cache is still allowed
-	set_inode_slab_tunables "1 1 0"
 	cancel_lru_locks osc
 	BEFORE_INODES=$(num_inodes)
 	echo "before inodes: $BEFORE_INODES"
@@ -6040,7 +6028,6 @@ test_76() { # Now for bug 20433, added originally in bug 1443
 			error "inode slab grew from $BEFORE_INODES to $AFTER_INODES"
 		fi
 	done
-	set_inode_slab_tunables "$SLAB_SETTINGS"
 }
 run_test 76 "confirm clients recycle inodes properly ===="
 
